--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://vignesh2828.github.io",
+  "homepage": "https://vignesh2828.github.io/react-deploy",
   "name": "landingpage-react-template",
   "private": true,
   "dependencies": {
